added new personal essays

--- a/index.html
+++ b/index.html
@@ -93,6 +93,27 @@
           <h3><span style="font-weight:normal;">Latest publications:</span></h3>
             <div style="margin: 0 5% 0 5%">
               <h4>
+                <span style="font-weight:normal">Entry 580:</span>
+                <a href="writings/personal-essays/580-future-ventures-in-art.html">"Future Ventures in Art (Video Photography and New Music)"</a>
+                <span style="font-size:16px;font-weight:normal;">
+                (2023/3/22)</span>
+
+                <br>
+
+                <span style="font-weight:normal">Entry 578:</span>
+                <a href="writings/personal-essays/578-inherent-ego-of-living.html">"Inherent Ego of Living"</a>
+                <span style="font-size:16px;font-weight:normal;">
+                (2023/3/14)</span>
+
+                <br>
+
+                <span style="font-weight:normal">Entry 574:</span>
+                <a href="writings/personal-essays/574-sad-hopelessness-and-sad-optimism.html">"Sad Hopelessness and Sad Optimism"</a>
+                <span style="font-size:16px;font-weight:normal;">
+                (2023/3/8)</span>
+
+                <br>
+
                 <span style="font-weight:normal">Poem 12:</span>
                 <a href="writings/poems/012-sonnet-one.html">"Sonnet I"</a>
                 <span style="font-size:16px;font-weight:normal;">
