--- a/writings/personal-essays/531-layers-of-consciousness.html
+++ b/writings/personal-essays/531-layers-of-consciousness.html
@@ -52,9 +52,9 @@
         <!-- Quick navigation -->
         <p style="margin: 0 10% 0 10%"><a href="../../writings/personal-essays/personal-essays.html">&larr; back to personal essays</a></p>
         <p style="margin: 0 10% 0 10%; text-align: left">
-          <a href="523-deliberate-mutism.html" title="Deliberate Mutism">&larr; to previous entry</a>
+          <a href="527-an-appreciation-of-circumstances.html" title="An Appreciation of Circumstances">&larr; to previous entry</a>
           <span style="float: right">
-            <a href="550-anybody-can-learn-anything.html" title="Anybody Can Learn Anything">to next entry &rarr;</a>
+            <a href="548-sometimes-the-end-comes-too-soon.html" title="Sometimes the end comes too soon, but never on accident">to next entry &rarr;</a>
           </span>
         </p>
 
