--- a/writings/personal-essays/555-facade-of-pleasantries.html
+++ b/writings/personal-essays/555-facade-of-pleasantries.html
@@ -54,7 +54,7 @@
         <p style="margin: 0 10% 0 10%; text-align: left">
           <a href="554-what-i-value.html" title="What I Value">&larr; to previous entry</a>
           <span style="float: right">
-            <a href="557-vow-of-silence.html" title="Vows of Silence and Blindness">to next entry &rarr;</a>
+            <a href="556-forced-love-and-natural-love.html" title="Forced Love and Natural Love">to next entry &rarr;</a>
           </span>
         </p>
 
