--- a/writings/personal-essays/557-vow-of-silence.html
+++ b/writings/personal-essays/557-vow-of-silence.html
@@ -52,7 +52,7 @@
         <!-- Quick navigation -->
         <p style="margin: 0 10% 0 10%"><a href="../../writings/personal-essays/personal-essays.html">&larr; back to personal essays</a></p>
         <p style="margin: 0 10% 0 10%; text-align: left">
-          <a href="555-facade-of-pleasantries.html" title="Facade of Pleasantries (On Being Deliberately Obtuse)">&larr; to previous entry</a>
+          <a href="556-forced-love-and-natural-love.html" title="Forced Love and Natural Love">&larr; to previous entry</a>
           <span style="float: right">
             <a href="558-this-too-shall-pass.html" title="This Too Shall Pass">to next entry &rarr;</a>
           </span>
