--- a/writings/personal-essays/574-sad-hopelessness-and-sad-optimism.html
+++ b/writings/personal-essays/574-sad-hopelessness-and-sad-optimism.html
@@ -10,7 +10,7 @@
   <!--Webpage Title-->
   <head>
     <meta charset="utf-8">
-    <title>Anybody Can Learn Anything | aidan's blog</title>
+    <title>Sad Hopelessness and Sad Optimism | aidan's blog</title>
     <link href="../../styles/style.css" rel="stylesheet">
   </head>
 
@@ -52,16 +52,16 @@
         <!-- Quick navigation -->
         <p style="margin: 0 10% 0 10%"><a href="../../writings/personal-essays/personal-essays.html">&larr; back to personal essays</a></p>
         <p style="margin: 0 10% 0 10%; text-align: left">
-          <a href="548-sometimes-the-end-comes-too-soon.html" title="Sometimes the end comes too soon, but never on accident">&larr; to previous entry</a>
+          <a href="570-the-power-of-change.html" title="The Power of Change">&larr; to previous entry</a>
           <span style="float: right">
-            <a href="551-the-art-of-conversation.html" title="The Art of Conversation">to next entry &rarr;</a>
+            <a href="578-inherent-ego-of-living.html" title="Inherent Ego of Living">to next entry &rarr;</a>
           </span>
         </p>
 
         <!-- Entry Title -->
         <header style="margin: 0 10% 0 10%">
-          <h1 style="margin: 5% 0 0 0">Anybody Can Learn Anything</h1>
-          <p style="margin: 0 0 30px 0">Entry 550, 2022/4/1</p>
+          <h1 style="margin: 5% 0 0 0">Sad Hopelessness and Sad Optimism</h1>
+          <p style="margin: 0 0 30px 0">Entry 574, 2023/3/8</p>
           
           <hr><br>
 
@@ -69,21 +69,32 @@
 
         <!-- Main Content -->
         <div align="justify" style="margin: 0 10% 10px 10%">
-          <p>I am of the opinion that anyone can learn anything, because anything that humans make must necessarily be able to be understood by humans. Understanding is different from knowledge—there is always something new to learn even in simple things, because simplicity brings about complexity.
+          <p>I feel lonely, but I don't know why.<br>
+            I feel dejected, but I don't know why.<br>
+            I feel like crying, but I don't know why.
+            </p>
+          <p>Yet, I read my philosophy and it gives me some hope.<br>
+            And I listen to music and I think,<br>
+            "Yes, I can do that: I can be free, and unchained, and never let my dreams slip away."
+            </p>
+          <p>Why is it, that you can feel so alone even when around so many people?
           </p>
-          <p>For example, chess is a game with simple rules, but it is not a simple game to play.
+
+          <hr>
+
+          <p>I flip back and forth, day by day, even hour by hour, between sad hopelessness and sad optimism. Sad hopelessness is when 
+            I feel depressed, and I am sure that things will never get better for me. Sad optimism is when I feel depressed, but I can 
+            see some happiness within my future—I can see some path which I can follow that will lead me to peace.
           </p>
-          <p>I believe that anything can be understood if enough time is dedicated to it. The problem is that many people don't have the drive or the will to be able to focus on learning something. The fault of humans is in their drive, not their intellect.
+          <p>Earlier today, I was sad and hopeless. Now, I am optimistic, yet still sad—I always am sad. Always. There has never been a 
+            day in my life where I have been truly happy. Never. There is always that tinge of sadness, of despair, of longing, of unfulfillment.
           </p>
-          <p>Humans are capable of creating. The same cannot be said of many animals on this planet. However, I think that animals are a lot closer to humans than most people want to admit—after all, most people eat animals, and it would be painful to admit that they feel and think similarly to humans.
+          <p>Even when I am smiling, and laughing, and having fun, there is a voice in the back of my head which says, "No, you can't be 
+            happy. Remember that one day you will die. Remember how useless everything is. Remember how lonely you feel. Remember that 
+            you have no one to turn to." And sometimes there is no voice, and there is only an indistinct feeling which I can't place, 
+            but which has an overwhelming effect on me. Those are the times where I feel like doing nothing at all.
           </p>
-          <p>Humans are unique though. We have conquered the planet due to our ability to use our hands to create and our minds to invent.
-          </p>
-          <p>I think that nothing that humans create is complex. There is nothing so complex that humans have created that it cannot be understood by other humans.
-          </p>
-          <p>In the past I would have thought that there are some things in the world that are too complex for understanding, especially by people less intellectually endowed. Now I am not so sure. I used to look down on the people that thought that anyone can do anything—I thought it was just overly optimistic malarkey. I believe it now.
-          </p>
-          
+
           <br><hr><br>
 
         </div>
