--- a/writings/personal-essays/personal-essays.html
+++ b/writings/personal-essays/personal-essays.html
@@ -83,6 +83,21 @@
               <th style="width: 10%">Entry#</th>
             </tr>
             <tr>
+              <td>2023/3/22</td>
+              <td><a href="580-future-ventures-in-art.html">Future Ventures in Art (Video Photography and New Music)</a></td>
+              <td>580</td>
+            </tr>
+            <tr>
+              <td>2023/3/14</td>
+              <td><a href="578-inherent-ego-of-living.html">Inherent Ego of Living</a></td>
+              <td>578</td>
+            </tr>
+            <tr>
+              <td>2023/3/8</td>
+              <td><a href="574-sad-hopelessness-and-sad-optimism.html">Sad Hopelessness and Sad Optimism</a></td>
+              <td>574</td>
+            </tr>
+            <tr>
               <td>2023/2/26</td>
               <td><a href="570-the-power-of-change.html">The Power of Change</a></td>
               <td>570</td>
@@ -128,6 +143,11 @@
               <td>557</td>
             </tr>
             <tr>
+              <td>2022/8/4</td>
+              <td><a href="556-forced-love-and-natural-love.html">Forced Love and Natural Love</a></td>
+              <td>556</td>
+            </tr>
+            <tr>
               <td>2022/7/17</td>
               <td><a href="555-facade-of-pleasantries.html">Facade of Pleasantries (On Being Deliberately Obtuse)</a></td>
               <td>555</td>
@@ -151,6 +171,11 @@
               <td>2022/4/1</td>
               <td><a href="550-anybody-can-learn-anything.html">Anybody Can Learn Anything</a></td>
               <td>550</td>
+            </tr>
+            <tr>
+              <td>2022/3/20</td>
+              <td><a href="548-sometimes-the-end-comes-too-soon.html">Sometimes the end comes too soon, but never on accident</a></td>
+              <td>548</td>
             </tr>
             <tr>
               <td>2021/10/26</td>
