--- a/writings/personal-essays/570-the-power-of-change.html
+++ b/writings/personal-essays/570-the-power-of-change.html
@@ -53,11 +53,9 @@
         <p style="margin: 0 10% 0 10%"><a href="../../writings/personal-essays/personal-essays.html">&larr; back to personal essays</a></p>
         <p style="margin: 0 10% 0 10%; text-align: left">
           <a href="569-fake-people.html" title="Fake People">&larr; to previous entry</a>
-          <!--
           <span style="float: right">
-            <a href="552-i-wish-i-could-leave-society.html" title="I wish I could leave society">to next entry &rarr;</a>
+            <a href="574-sad-hopelessness-and-sad-optimism.html" title="Sad Hopelessness and Sad Optimism">to next entry &rarr;</a>
           </span>
-        -->
         </p>
 
         <!-- Entry Title -->
