fixed incorrect italics on entry 578

--- a/writings/personal-essays/578-inherent-ego-of-living.html
+++ b/writings/personal-essays/578-inherent-ego-of-living.html
@@ -91,7 +91,7 @@
             that we are all connected to the Universe, and so we are all driven by the same mechanisms which drive the Universe, it can be 
             said that by damaging you, I am also damaging myself. As I say within my "Universal Religion" (Universal Philosophy):
           </p>
-          <p style="margin: 0 5% 0 5%"><em>
+          <p style="margin: 0 5% 0 5%">
             <em>"Be kind to the creatures of the Earth. And be kind to the Earth and the Universe and everything that you can see, for it 
               all belongs to the Universe and it is all a part of the same. To abuse any creature would be to abuse the Universe. Care for 
               the Earth and the creatures within it, for if they suffer then you are suffering too."
