fixed typo in 556

--- a/writings/personal-essays/556-forced-love-and-natural-love.html
+++ b/writings/personal-essays/556-forced-love-and-natural-love.html
@@ -75,7 +75,7 @@
             don't truly love.
           </p>
           <p>I don't want to settle for anyone less than perfect for me; and maybe everyone doesn't want to settle either, but they end 
-            up caving and doing it again; and maybe I will be the same way and I will settle one day too, but I don't want to.
+            up caving and doing it anyway; and maybe I will be the same way and I will settle one day too, but I don't want to.
           </p>
           <p>Surely, out of everyone in the world, there must be at least a few who I could call "perfect" for me. The problem is where 
             are they? They might be on the other side of the world, and I would have no chance of ever finding them. And have they already 
