--- a/writings/personal-essays/580-future-ventures-in-art.html
+++ b/writings/personal-essays/580-future-ventures-in-art.html
@@ -72,7 +72,7 @@
         <!-- Main Content -->
         <div align="justify" style="margin: 0 10% 10px 10%">
           <h3>Action follows motivation, or motivation follows action?</h3>
-          <p>Talking with Aila, and having the knowledge that I've gained a new friend, has motivated me greatly to continue pursuing my 
+          <p>Having the knowledge that I've gained a new friend has motivated me greatly to continue pursuing my 
             hobbies—to take things a bit more seriously—and to take the plunge into new hobbies that I've been <em>thinking</em> about starting for 
             a while but have yet to get the equipment or motivation for.
           </p>
@@ -86,7 +86,7 @@
           </p>
           <p>I felt that it was necessary to pass her the note. I felt that I needed a change in my life—this wasn't a motivation, it was a 
             depression. It was an <em>impression</em>, rather. An impression that I got which told me it would be good to do something to better my 
-            life, and I thought that if I didn't ask out Aila or anyone that I would regret it later, because I felt, and still feel, that 
+            life, and I thought that if I didn't ask out her or anyone that I would regret it later, because I felt, and still feel, that 
             I'm throwing away my youth. I need to use my time wisely, because every day I get older, or, to say it backwards, every day my 
             youth depletes.
           </p>
@@ -128,8 +128,8 @@
             music" (see <a href="519-a-description-of-my-music.html">entry 519</a>), but I never listened very deeply to that type of music. 
             And anyway, my meditation music was quite different from ambient music.
           </p>
-          <p>I started listening to ambient music because of Aila. During our picnic she played Boards of Canada. I listened to some of that 
-            when I got home that night, and that led me down the path of ambient music. I've been "composing" (or rather, improvising) some 
+          <p>I started listening to ambient music because of {my new friend}. During our picnic she played Boards of Canada. I listened to some 
+            of that when I got home that night, and that led me down the path of ambient music. I've been "composing" (or rather, improvising) some 
             ambient music over the past week. I've already made 13 tracks. Most of them are, as would be expected from improvisations, not 
             all that great. There are a few which I like, and I might expand on them eventually. 
           </p>
@@ -143,7 +143,7 @@
 
           <p>Anyway, that's all for now. I have a final exam tomorrow which I need to do well on, so I'm going to get some sleep and study 
             for that in the morning. After that I have Spring break. I have so many ideas for new hobbies and new things that I want to get. 
-            I'm going to have a lot of things to share with Aila when we get back from Spring break.
+            I'm going to have a lot of things to share with {my new friend} when we get back from Spring break.
           </p>
 
           <br><hr><br>
