added new definitions to glossaries

--- a/glossary/glossary.html
+++ b/glossary/glossary.html
@@ -83,6 +83,19 @@
             </p>
           </div>
 
+          <!-- Beautiful Person -->
+          <div id="beautifulperson">
+            <h2 style="margin: 0"><a href="#beautifulperson">Beautiful Person</a></h2>
+            <p style="font-size: 80%; margin: 0 0 10px 0"><a href="../writings/personal-essays/568-beautiful-people.html">see Entry 568 "Beautiful People, and Soulmates"</a></p>
+            <p>
+              a person who has beauty on the inside (in their mind). This means someone who is insightful, philosophical, optimistic, creative, and
+              ever-changing, in all the right ways—as well as being charming and all of those other charismatic traits. Someone who is never angry,
+              and always has something beautiful to say about any situation. 
+              It is an ideal which can never truly be reached fully, only partially.<br>
+              <span style="margin-left:5%">related: <a href="#philosophyofbeautifulminds">Philosophy of Beautiful Minds</a></span>
+            </p>
+          </div>
+
           <!-- Circular Narrative -->
           <div id="circularnarrative">
             <h2 style="margin: 0"><a href="#circularnarrative">Circular Narrative</a></h2>
@@ -131,6 +144,20 @@
             </p>
           </div>
 
+          <!-- Forced Love VS. Natural Love -->
+          <div id="forcedvsnaturallove">
+            <h2 style="margin: 0"><a href="#forcedvsnaturallove">Forced Love vs. Natural Love</a></h2>
+            <p style="font-size: 80%; margin: 0 0 10px 0"><a href="../writings/personal-essays/556-forced-love-and-natural-love.html">see Entry 556 "Forced Love and Natural Love"</a></p>
+            <p>
+              forced love: "settling" for someone lesser than what you know you really want; when you force yourself to try to love 
+              someone and you force yourself into a relationship despite a lack of real connection.
+            </p>
+            <p>
+              natural love: "soul-mates", in a way; the kind of love where you know right away that you love them, because everything 
+              about them is immediately perfect (in your perception).
+            </p>
+          </div>
+
           <!-- Outlined Book -->
           <div id="outlined-book">
             <h2 style="margin:0"><a href="#outlined-book">Outlined Book</a></h2>
@@ -141,6 +168,18 @@
             </p>
           </div>
 
+          <!-- Philosophy of Beautiful Minds -->
+          <div id="philosophyofbeautifulminds">
+            <h2 style="margin: 0"><a href="#philosophyofbeautifulminds">The Philosophy of Beautiful Minds</a></h2>
+            <p style="font-size: 80%; margin: 0 0 10px 0"><a href="../writings/personal-essays/562-the-philosophy-of-beautiful-minds.html">see Entry 562 "The Philosophy of Beautiful Minds"</a></p>
+            <p>
+              a type of mindset which helps one to appreciate art more: whenever one is engaging with a work of art, either visual, 
+              spatial, aural, or some other medium, look past the art and imagine its creator—but further than just imagining the 
+              creator, imagine the creator's mind, and specifically ask yourself, "what kind of mind must theirs be in order to 
+              create such beautiful art?"
+            </p>
+          </div>
+
           <!-- Pretender -->
           <div id="pretender">
             <h2 style="margin:0"><a href="#pretender">Pretender</a></h2>
@@ -148,6 +187,26 @@
             <p>
               people who fake who they are to society, making themself appear better and more productive/helpful than they
               really are; and who waste their time doing nothing but say otherwise.
+            </p>
+          </div>
+
+          <!-- Sad Hopelessness VS. Sad Optimism -->
+          <div id="sadhopelessness-optimism">
+            <h2 style="margin: 0"><a href="#sadhopelessness-optimism">Sad Hopelessness vs. Sad Optimism</a></h2>
+            <p style="font-size: 80%; margin: 0 0 10px 0"><a href="../writings/personal-essays/574-sad-hopelessness-and-sad-optimism.html">see Entry 574 "Sad Hopelessness and Sad Optimism"</a></p>
+            <p>
+              sad hopelessness: depression, and feeling hopeless about your future.<br>
+              sad optimism: depression, yet feeling optimistic about your future.
+            </p>
+          </div>
+
+          <!-- Utopia -->
+          <div id="utopia">
+            <h2 style="margin:0"><a href="#utopia">Utopia</a></h2>
+            <p>
+              an impossible world where everything is always perfect, forever, which goes against the most fundamental property of the Universe:
+              that which says that everything is impermanent. Such a perfect world wouldn't have work, money, government (since there is no need 
+              to govern perfect individuals), death, pain, boredom, etc. It would be a world of <a href="#beautifulperson">Beautiful people</a>.
             </p>
           </div>
 
