--- a/musical-glossary/musical-glossary.html
+++ b/musical-glossary/musical-glossary.html
@@ -64,6 +64,15 @@
         <!-- Main Content -->
         <div align="justify" style="margin: 0 10% 10px 10%">
 
+          <!-- Chant -->
+          <div id="chant">
+            <h2 style="margin:0"><a href="#chant">Chant</a></h2>
+            <p>
+              a single musical line which is repeated, and which has plenty of ornamentation and melismas, in the style of
+              Gregorian or plain chants of the mediæval period.
+            </p>
+          </div>
+
           <!-- Double Canon -->
           <div id="doublecanon">
             <h2 style="margin: 0"><a href="#doublecanon">Double Canon</a></h2>
@@ -98,6 +107,14 @@
             <p>
               a main section or melodic phrase as part of a type of repetitive meditation music; typically there are multiple mantras within 
               this type of music that are repeated according to a structure and there is typically no development—it is static.
+            </p>
+          </div>
+
+          <!-- Musical Prosody -->
+          <div id="musical-prosody">
+            <h2 style="margin:0"><a href="#musical-prosody">Musical Prosody</a></h2>
+            <p>
+              a method of setting words to music which analyses the natural rhythm of the lines; poetical music.
             </p>
           </div>
 
