updated "about me" page

--- a/about-me/about-me.html
+++ b/about-me/about-me.html
@@ -51,7 +51,7 @@
 
         <br>
 
-        <p style="margin: 0 10% 0 10%">Page created 2022/4/28, last updated 2022/9/12</p>
+        <p style="margin: 0 10% 0 10%">Page created 2022/4/28, last updated 2023/4/7</p>
 
         <!-- Entry Title -->
         <header style="margin: 0 10% 0 10%">
@@ -87,7 +87,7 @@
               </p>    
             </div>
             <div class="newcolumn right">
-              <img src="selfportrait.png" alt="Self-Portrait" title="Self-Portrait" width="85%" style="float:right">
+              <img src="selfportrait-2023-04-07.jpg" alt="Self-Portrait" title="Self-Portrait" width="85%" style="float:right">
             </div>
           </div>
 
