added 5 new personal essays

--- a/writings/personal-essays/580-future-ventures-in-art.html
+++ b/writings/personal-essays/580-future-ventures-in-art.html
@@ -53,11 +53,9 @@
         <p style="margin: 0 10% 0 10%"><a href="../../writings/personal-essays/personal-essays.html">&larr; back to personal essays</a></p>
         <p style="margin: 0 10% 0 10%; text-align: left">
           <a href="578-inherent-ego-of-living.html" title="Inherent Ego of Living">&larr; to previous entry</a>
-          <!--
           <span style="float: right">
-            <a href="552-i-wish-i-could-leave-society.html" title="I wish I could leave society">to next entry &rarr;</a>
+            <a href="581-chaos-in-changes.html" title="Chaos in Changes">to next entry &rarr;</a>
           </span>
-        -->
         </p>
 
         <!-- Entry Title -->
