--- a/writings/personal-essays/personal-essays.html
+++ b/writings/personal-essays/personal-essays.html
@@ -83,6 +83,31 @@
               <th style="width: 10%">Entry#</th>
             </tr>
             <tr>
+              <td>2023/4/11</td>
+              <td><a href="588-the-90s-crossover.html">The 90s Crossover</a></td>
+              <td>588</td>
+            </tr>
+            <tr>
+              <td>2023/4/10</td>
+              <td><a href="587-change-is-only-a-matter-of-time.html">Change is only a Matter of Time</a></td>
+              <td>587</td>
+            </tr>
+            <tr>
+              <td>2023/4/9</td>
+              <td><a href="586-wheres-my-life.html">Where's My Life?</a></td>
+              <td>586</td>
+            </tr>
+            <tr>
+              <td>2023/4/7</td>
+              <td><a href="583-getting-old-scares-me.html">Getting Old Scares Me</a></td>
+              <td>583</td>
+            </tr>
+            <tr>
+              <td>2023/4/4</td>
+              <td><a href="581-chaos-in-changes.html">Chaos in Changes</a></td>
+              <td>581</td>
+            </tr>
+            <tr>
               <td>2023/3/22</td>
               <td><a href="580-future-ventures-in-art.html">Future Ventures in Art (Video Photography and New Music)</a></td>
               <td>580</td>
