updated home page

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <br>
 
-        <p style="margin: 0 10% 0 10%">Page created 2022/4/25, last updated 2023/3/7</p>
+        <p style="margin: 0 10% 0 10%">Page created 2022/4/25, last updated 2023/4/11</p>
 
         <!-- Entry Title -->
         <header style="margin: 0 10% 0 10%">
@@ -93,6 +93,41 @@
           <h3><span style="font-weight:normal;">Latest publications:</span></h3>
             <div style="margin: 0 5% 0 5%">
               <h4>
+                <span style="font-weight:normal">Entry 588:</span>
+                <a href="writings/personal-essays/588-the-90s-crossover.html">"The 90s Crossover"</a>
+                <span style="font-size:16px;font-weight:normal;">
+                (2023/4/11)</span>
+
+                <br>
+
+                <span style="font-weight:normal">Entry 587:</span>
+                <a href="writings/personal-essays/587-change-is-only-a-matter-of-time.html">"Change is only a Matter of Time"</a>
+                <span style="font-size:16px;font-weight:normal;">
+                (2023/4/10)</span>
+
+                <br>
+
+                <span style="font-weight:normal">Entry 586:</span>
+                <a href="writings/personal-essays/586-wheres-my-life.html">"Where's My Life?"</a>
+                <span style="font-size:16px;font-weight:normal;">
+                (2023/4/9)</span>
+
+                <br>
+
+                <span style="font-weight:normal">Entry 583:</span>
+                <a href="writings/personal-essays/583-getting-old-scares-me.html">"Getting Old Scares Me"</a>
+                <span style="font-size:16px;font-weight:normal;">
+                (2023/4/7)</span>
+
+                <br>
+
+                <span style="font-weight:normal">Entry 581:</span>
+                <a href="writings/personal-essays/581-chaos-in-changes.html">"Chaos in Changes"</a>
+                <span style="font-size:16px;font-weight:normal;">
+                (2023/4/4)</span>
+
+                <br>
+
                 <span style="font-weight:normal">Entry 580:</span>
                 <a href="writings/personal-essays/580-future-ventures-in-art.html">"Future Ventures in Art (Video Photography and New Music)"</a>
                 <span style="font-size:16px;font-weight:normal;">
@@ -104,37 +139,17 @@
                 <a href="writings/personal-essays/578-inherent-ego-of-living.html">"Inherent Ego of Living"</a>
                 <span style="font-size:16px;font-weight:normal;">
                 (2023/3/14)</span>
-
-                <br>
-
-                <span style="font-weight:normal">Entry 574:</span>
-                <a href="writings/personal-essays/574-sad-hopelessness-and-sad-optimism.html">"Sad Hopelessness and Sad Optimism"</a>
-                <span style="font-size:16px;font-weight:normal;">
-                (2023/3/8)</span>
-
-                <br>
-
-                <span style="font-weight:normal">Poem 12:</span>
-                <a href="writings/poems/012-sonnet-one.html">"Sonnet I"</a>
-                <span style="font-size:16px;font-weight:normal;">
-                (2023/3/7)</span>
-
-                <br>
-
-                <span style="font-weight:normal">Poem 11:</span>
-                <a href="writings/poems/011-four-couplets-four.html">"Four Couplets IV"</a>
-                <span style="font-size:16px;font-weight:normal;">
-                (2023/2/19–3/3)</span>
-
-                <br>
-
-                <span style="font-weight:normal">Entry 570:</span>
-                <a href="writings/personal-essays/570-the-power-of-change.html">"The Power of Change"</a>
-                <span style="font-size:16px;font-weight:normal;">
-                (2023/2/26)</span>
               </h4>
             </div>
           
+          <hr>
+
+          <p><strong>An important note:</strong> if you experience white flashes when clicking through pages, click "Change Theme" in the 
+            navbar on the left. You could also change your browser settings to dark mode, and have it override system colors. This will 
+            make the white flashes black instead and will render the dark mode of this site more enjoyable; however, doing this will break 
+            other websites that don't have their text and background colors properly set up, which happens to be quite a lot of websites 
+            from what I've found.</p>
+
           <hr>
 
           <p>
@@ -148,14 +163,6 @@
             is <em>not</em> my own artwork (unless stated that it is mine), and typically will fall under the public domain. This includes
             paintings and drawings within the Poems, and occasional images within the Personal Essays, and possibly
             other things. Everything other than the artworks is my own original work.</p>
-
-          <hr>
-
-          <p><strong>An important note:</strong> if you experience white flashes when clicking through pages, click "Change Theme" in the 
-          navbar on the left. You could also change your browser settings to dark mode, and have it override system colors. This will 
-          make the white flashes black instead and will render the dark mode of this site more enjoyable; however, doing this will break 
-          other websites that don't have their text and background colors properly set up, which happens to be quite a lot of websites 
-          from what I've found.</p>
 
           <br><hr><br>
 
