updated the note on the home page

--- a/index.html
+++ b/index.html
@@ -145,10 +145,17 @@
           <hr>
 
           <p><strong>An important note:</strong> if you experience white flashes when clicking through pages, click "Change Theme" in the 
-            navbar on the left. You could also change your browser settings to dark mode, and have it override system colors. This will 
-            make the white flashes black instead and will render the dark mode of this site more enjoyable; however, doing this will break 
-            other websites that don't have their text and background colors properly set up, which happens to be quite a lot of websites 
-            from what I've found.</p>
+            navbar on the left.</p>
+            <details style="margin: 0 5% 0 5%">
+              <summary>More info</summary>
+              <p>If you'd like to use the dark theme of the site, change your browser settings to dark mode, and have it override system colors. 
+                This will make the white flashes black instead and will render the dark mode of this site more enjoyable; however, doing this 
+                will break other websites that don't have their text and background colors properly set up, which happens to be quite a lot of 
+                websites from what I've found.</p>
+              <p>The browser you use also makes a difference. I find Firefox to work the poorest in terms of the flashing when changing pages.
+                Chromium-based browsers—like Google Chrome and Vivaldi—work better. Safari I've found to be the best though.
+              </p>
+            </details>
 
           <hr>
 
