added links to about me page

--- a/about-me/about-me.html
+++ b/about-me/about-me.html
@@ -51,7 +51,7 @@
 
         <br>
 
-        <p style="margin: 0 10% 0 10%">Page created 2022/4/28, last updated 2023/4/7</p>
+        <p style="margin: 0 10% 0 10%">Page created 2022/4/28, last updated 2023/4/12</p>
 
         <!-- Entry Title -->
         <header style="margin: 0 10% 0 10%">
@@ -90,6 +90,13 @@
               <img src="selfportrait-2023-04-07.jpg" alt="Self-Portrait" title="Self-Portrait" width="85%" style="float:right">
             </div>
           </div>
+
+          <details>
+            <summary>Links</summary>
+            <span style="margin: 0 5% 0 5%">Instagram: <a id="external" href="https://www.instagram.com/aidan.figlietti/">aidan.figlietti</a></span>
+            <br>
+            <span style="margin: 0 5% 0 5%">Youtube: <a id="external" href="https://www.youtube.com/@aidanfiglietti">@aidanfiglietti</a></span>
+          </details>
 
           <br><hr><br>
 
