preparing first version of gallery

--- a/writings/personal-essays/568-beautiful-people.html
+++ b/writings/personal-essays/568-beautiful-people.html
@@ -96,7 +96,7 @@
             are dead.
           </p>
 
-          <br><img src="images/568-A-NF01065-285.jpg" alt="Candid Edwardian Woman" width="40%" style="display:block;margin-left:auto;margin-right:auto;border:5px solid #ececec"><br>
+          <br><img src="images/568-A-NF01065-285.jpg" alt="Candid Edwardian Woman" width="40%" style="display:block;margin-left:auto;margin-right:auto" id="image-border"><br>
 
           <p>How can beautiful people live in such a terrible world? Where do they go?
           </p>
