--- a/writings/personal-essays/587-change-is-only-a-matter-of-time.html
+++ b/writings/personal-essays/587-change-is-only-a-matter-of-time.html
@@ -72,7 +72,7 @@
           <p>I'm writing this from the courtyard of Baskin Engineering on campus.
           </p>
 
-          <img src="images/587-A-DSCF0157.jpg" alt="Baskin Engineering courtyard" width="60%" style="display:block;margin-left:auto;margin-right:auto;border:5px solid #ececec">
+          <img src="images/587-A-DSCF0157.jpg" alt="Baskin Engineering courtyard" width="60%" style="display:block;margin-left:auto;margin-right:auto" id="image-border">
 
           <p>I can't take anything in my life to be constant. Even the most fundamental of things, which I had thought were what built the 
             very core of my entire existence, can eventually change—it's only a matter of time. I had thought that I would be creating 
