--- a/writings/personal-essays/588-the-90s-crossover.html
+++ b/writings/personal-essays/588-the-90s-crossover.html
@@ -83,10 +83,10 @@
           <div id="page-wrap">
             <div class="row" id="images">
               <div class="column">
-                <img src="images/588-A-DSCF0169.jpg" alt="90s crossover example" width="60%" style="display:block;margin-left:auto;margin-right:auto;border:5px solid #ececec">
+                <img src="images/588-A-DSCF0169.jpg" alt="90s crossover example" width="60%" style="display:block;margin-left:auto;margin-right:auto" id="image-border">
               </div>
               <div class="column">
-                <img src="images/588-B-DSCF0166.jpg" alt="90s crossover example" width="60%" style="display:block;margin-left:auto;margin-right:auto;border:5px solid #ececec">
+                <img src="images/588-B-DSCF0166.jpg" alt="90s crossover example" width="60%" style="display:block;margin-left:auto;margin-right:auto" id="image-border">
               </div>
             </div>
           </div>
