--- a/writings/personal-essays/557-vow-of-silence.html
+++ b/writings/personal-essays/557-vow-of-silence.html
@@ -77,7 +77,7 @@
             world as her husband does.
           </p>
 
-          <br><img src="images/557-Gandhari_on_throne.jpg" alt="Gandhari on Throne" width="40%" style="display:block;margin-left:auto;margin-right:auto;border:5px solid #ececec"><br>
+          <br><img src="images/557-Gandhari_on_throne.jpg" alt="Gandhari on Throne" width="40%" style="display:block;margin-left:auto;margin-right:auto" id="image-border"><br>
 
           <p>I wonder if I could do a vow of blindness, just to see what life is like as a blind person—and also to appreciate 
             what I have more, which is really the idea behind all vows including silence. Even crossing the street seems like 
