first version of gallery

--- a/art/001-collages/001-collages.html
+++ b/art/001-collages/001-collages.html
@@ -61,7 +61,7 @@
         <!-- Entry Title -->
         <header style="margin: 0 10% 0 10%">
           <h1 style="margin: 5% 0 0 0">Digital Collages</h1>
-          <p style="margin: 0 0 30px 0">Artwork 001, 2023/4/13</p>
+          <p style="margin: 0 0 30px 0">Artwork 001, 2023/4/12</p>
           
           <hr><br>
 
@@ -70,16 +70,23 @@
         <!-- Main Content -->
         <div align="justify" style="margin: 0 10% 10px 10%">
 
-          <div id="page-wrap">
-            <div class="row" id="images">
-              <div class="column">
-                <img src="images/588-A-DSCF0169.jpg" alt="90s crossover example" width="60%" style="display:block;margin-left:auto;margin-right:auto" id="image-border">
-              </div>
-              <div class="column">
-                <img src="images/588-B-DSCF0166.jpg" alt="90s crossover example" width="60%" style="display:block;margin-left:auto;margin-right:auto" id="image-border">
-              </div>
-            </div>
-          </div>
+          <p align="center">
+            It's nothing to wish for a time.<br>
+            I can spend all my life wishing on dimes,<br>
+            throwing them into fountains.<br>
+            It means nothing more than anything else.
+          </p>
+
+          <img src="images/1.jpg" alt="collage 1" width="70%" style="display:block;margin-left:auto;margin-right:auto" id="image-border">
+          <br>
+          <img src="images/2.jpg" alt="collage 2" width="70%" style="display:block;margin-left:auto;margin-right:auto" id="image-border">
+          <br>
+          <img src="images/3.jpg" alt="collage 3" width="70%" style="display:block;margin-left:auto;margin-right:auto" id="image-border">
+          <br>
+          <img src="images/4.jpg" alt="collage 4" width="70%" style="display:block;margin-left:auto;margin-right:auto" id="image-border">
+          <br>
+          <img src="images/5.jpg" alt="collage 5" width="70%" style="display:block;margin-left:auto;margin-right:auto" id="image-border">
+          <br>
 
           <br><hr><br>
 
