added new publications to home page

--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
           <h3><span style="font-weight:normal;">Latest publications:</span></h3>
             <div style="margin: 0 5% 0 5%">
               <h4>
+                <span style="font-weight:normal">Artwork 002:</span>
+                <a href="art/002-flowers/002-flowers.html">"Flowers"</a>
+                <span style="font-size:16px;font-weight:normal;">
+                (2023/4/13)</span>
+
+                <br>
+
+                <span style="font-weight:normal">Artwork 001:</span>
+                <a href="art/001-collages/001-collages.html">"Digital Collages"</a>
+                <span style="font-size:16px;font-weight:normal;">
+                (2023/4/12)</span>
+
+                <br>
+
                 <span style="font-weight:normal">Entry 588:</span>
                 <a href="writings/personal-essays/588-the-90s-crossover.html">"The 90s Crossover"</a>
                 <span style="font-size:16px;font-weight:normal;">
